# suffixtree-motif-speller

motifIterator/: .atom-build.yml  .gitignore  CMakeLists.txt  blsvectortests.cpp  genefamily.cpp  genefamily.h  groupOrtho1.txt  main.cpp  motif.cpp  motif.h  motifiteratortests.cpp  motifmap.cpp  motifmap.h  suffixtree.cpp  suffixtree.h
process_input/: .atom-build.yml  CMakeLists.txt  genes.cpp  genes.h  main.cpp  newick.cpp  newick.h  orthology.cpp  orthology.h
suffixtree/: .atom-build.yml  .gitignore  CMakeLists.txt  genefamily.cpp  genefamily.h  main.cpp  motif.cpp  motif.h  suffixtree.cpp  suffixtree.h
